Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <h2>Practice Labs</h2>
 
     <div class="nav-links">
-      <a href="xss.html">XSS Practice</a>
+      <a href="https://stirlinggee-crypto.github.io/xss">XSS Practice</a>
       <a href="sql.html">SQL Injection</a>
       <a href="urlinj.html">URL Injection</a>
       <a href="cmd.html">CMD Injection</a>
@@ -116,3 +116,4 @@
       <p>This is just a small test at the moment, but i'll add a new lab every 1-3 months</p>
 </body>
 </html>
+
