--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
     <div class="nav-links">
       <a href="https://stirlinggee-crypto.github.io/xss">XSS Practice</a>
-      <a href="sql.html">SQL Injection</a>
-      <a href="urlinj.html">URL Injection</a>
-      <a href="cmd.html">CMD Injection</a>
+      <a href="https://stirlinggee-crypto.github.io/sql_experament">SQL Injection</a>
+      <a href="https://stirlinggee-crypto.github.io/urlinj">URL Injection</a>
+      <a href="https://stirlinggee-crypto.github.io/cmdinj">CMD Injection</a>
       <a href="#">More Coming Soon</a>
     </div>
   </div>
@@ -116,4 +116,5 @@
       <p>This is just a small test at the moment, but i'll add a new lab every 1-3 months</p>
 </body>
 </html>
+
 
