--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="g0L7jzYSQvylUB1k37cnX_mddHK7R1tU4Cxwxtn3Wek" />
   <meta charset="UTF-8">
   <title>Security Practice Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -116,5 +117,6 @@
       <p>This is just a small test at the moment, but i'll add a new lab every 1-3 months</p>
 </body>
 </html>
+
 
 
