--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="google-site-verification" content="g0L7jzYSQvylUB1k37cnX_mddHK7R1tU4Cxwxtn3Wek" />
   <meta name="description" content="A free coding and hacking course with anything you will need to get started. (please click the link)">
   <meta name="keywords" content="hacking, free, couse, code, injection, SQL, cmd">
+  <meta name="author" content="HFP">
   <meta charset="UTF-8">
   <title>Security Practice Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,6 +88,11 @@
 
   <!-- Sidebar -->
   <div class="sidebar">
+    <h1>
+      <ruby>HFP
+        <rt>Hacking For Pros</rt>
+      </ruby>
+    <h1> 
     <h2>Practice Labs</h2>
 
     <div class="nav-links">
@@ -119,6 +125,7 @@
       <p>This is just a small test at the moment, but i'll add a new lab every 1-3 months</p>
 </body>
 </html>
+
 
 
 
