--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="msvalidate.01" content="580ED8E4A7DF1DDA433407295DD82273" />
   <meta name="google-site-verification" content="g0L7jzYSQvylUB1k37cnX_mddHK7R1tU4Cxwxtn3Wek" />
   <meta name="description" content="A free coding and hacking course with anything you will need to get started. (please click the link)">
   <meta name="keywords" content="hacking, free, couse, code, injection, SQL, cmd">
@@ -125,6 +126,7 @@
       <p>This is just a small test at the moment, but i'll add a new lab every 1-3 months</p>
 </body>
 </html>
+
 
 
 
