--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <li>SQL Injection Practice Page</li>
         <li>URL Parameter Injection</li>
         <li>Safe CMD Injection Simulator</li>
+        <li>SSTI practice page</li>
       </ul>
     </div>
 
