--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <a href="https://stirlinggee-crypto.github.io/xss">XSS Practice</a>
       <a href="https://stirlinggee-crypto.github.io/sql_experament">SQL Injection</a>
       <a href="https://stirlinggee-crypto.github.io/urlinj">URL Injection</a>
-      <a href="https://stirlinggee-crypto.github.io/cmdinj">CMD Injection</a>
+      <a href="https://stirlinggee-crypto.github.io/cmdinj?name=">CMD Injection</a>
       <a href="https://stirlinggee-crypto.github.io/SSTI">SSTI</a>
       <a href="#">More Coming Soon</a>
     </div>
