--- a/index.html
+++ b/index.html
@@ -126,12 +126,16 @@
     <div class="card">
       <h2>ℹ️ More Coming Soon</h2>
       <p>This is just a small test at the moment, but i'll add a new lab every 1-3 months</p>
+
+    <div class="card">
+      <p>Please leave feedback</p>
+      <form action="https://formspree.io/f/xldqzona" method="post">
+        <input type="email" name="email" placeholder="your email" requiered><br><br>
+        <textarea name="message" placeholder="your message"></textarea><br><br>
+        <button type="submit">Send</button><br><br>
+        <input type="hidden" name="_captcha" value="false">
+      </form>
+    </div>  
+    
 </body>
 </html>
-
-
-
-
-
-
-
