--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
       box-shadow: 0 3px 12px rgba(0,0,0,0.1);
     }
 
+    textarea, input {
+      margin-top: 25px;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      border: 1px solid #ddd;
+      box-shadow: 0 3px 12px rgba(0,0,0,0.1);
+    }
+
   </style>
 </head>
 <body>
@@ -139,3 +148,4 @@
     
 </body>
 </html>
+
